# vr2021

./: README.md
src/bring_up/: CMakeLists.txt  package.xml
src/bring_up/launch/: floor_test.launch  p3at_configure_v1.launch  p3at_configure_v2.launch  p3at_configure_v3.launch
src/bring_up/rviz/: map_merge_2.rviz  robot2-navigation.rviz  robot4-navigation.rviz  robot5-navigation.rviz
src/bring_up/sh/: bringup_multi_robots_final_indoor_1.sh  bringup_multi_robots_final_out_2.sh  bringup_rcap_indoor1.sh  bringup_rcap_outdoor1.sh
src/mrl_dashboard/: CMakeLists.txt  package.xml  setup.py  start.py
src/mrl_dashboard/launch/: bring_up.launch  p3at_configure.launch  quadrator_configure.launch
src/mrl_dashboard/src/mrl_dashboard/: add_robot.py  camera_manager.py  dashboard.py  global_config.py  input_listener.py  main.py  main.pyproject  robot_camera.py  robot_item.py  robot_model.py  setting.py  shared.py  teleop_keyboard.py  xlib.py
src/mrl_dashboard/src/mrl_dashboard/rviz/: map_merge_1.rviz  map_merge_3.rviz  map_merge_4.rviz  map_merge_5.rviz  map_merge_6.rviz  map_merge_7.rviz  map_merge_8.rviz  robot0-navigation.rviz  robot1-navigation.rviz  (+1 more)
src/mrl_exploration/: CMakeLists.txt  package.xml
src/mrl_exploration/include/explore/: explore.h
src/mrl_exploration/launch/: explore.launch  explore_lite.launch  global_map.launch  mrl_explore_costmap.launch  no_global_map.launch
src/mrl_exploration/src/: explore.cpp
src/mrl_map_merge/: CMakeLists.txt.user.d6818a4
src/mrl_map_merge/include/map_merge/: map_merge.h
src/mrl_map_merge/launch/: map_merge.launch  map_merge.rviz  map_merge1.rviz
src/mrl_map_merge/launch/experiments/: demo-scene-1.ttt.launch
src/mrl_map_merge/src/: map_merge.cpp
src/mrl_navigation/: CMakeLists.txt  package.xml
src/mrl_navigation/launch/: hector_mapping_p3at.launch  localization.launch  mrl_map_merge.launch  navfn_move_base.launch  pos_estimation.launch  robot0-navigation.rviz  slam_gmapping.launch  teb_move_base.launch
src/mrl_navigation/localization_config/: ekf_config.yaml
src/mrl_navigation/navfn_config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml
src/mrl_navigation/teb_config/: amcl_node.xml  amcl_params.yaml
src/mrl_navigation/teb_config/diff_drive/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params (copy).yaml  teb_local_planner_params.yaml
src/navigation/move_base/src/: move_base.cpp
src/teleop_twist_joy/: CMakeLists.txt  package.xml
src/teleop_twist_joy/config/: logitech.config.yaml  xbox.config.yaml
src/teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy.h
src/teleop_twist_joy/launch/: logitech_controller.launch  off_controller.launch  xbox_controller.launch
src/teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy.cpp
(+6 files in other folders)
