<?xml version="1.0"?>
<package>
  <name>teleop_twist_joy</name>
  <version>0.1.2</version>
  <description>MRL Virtual Robot Teleop twist joy</description>
  <maintainer email="mahdrsi@gmail.com">MohammadMahdi Raeisi</maintainer>

  <license>BSD</license>
  <author email="mrl@mrl.ir">MohammadMahdi Raeisi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
